--- a/_includes/index-header.html
+++ b/_includes/index-header.html
@@ -1,5 +1,8 @@
-<div id="zzz">
-<div>{% if page.url == '/' %}2dcloud{% else %} <a href="./">2dcloud</a>{% endif %} <a href="https://shop.2dcloud.com">Shop</a></div>
-{% if page.url == '/' %}<div><a href="substacks.html">substacks</a> <a href="mailto:info@2dcloud.com">email</a></div>
-<div>{% for article in site.posts %}{% if article.category == 'shop' %}{% elsif article.category == "author"%}{% elsif article.category == "explodingwrists"%}{% elsif article.layout == "redirect"%}{% elsif article.category == "notpublic"%}{% else %}{% if article.url != page.url %}<a href='{{site.baseurl}}{{article.url}}'>{% endif %}{{article.title}}{% if article.url != page.url %}</a>{% endif %} {% endif %}{% endfor %}</div>
-{% endif %}</div>
+<div id="zzz">{% if page.url == '/' %}2dcloud{% else %} 
+    <a href="./">2dcloud</a>{% endif %} 
+    <a href="https://shop.2dcloud.com">Shop</a> 
+{% if page.url == '/' %}
+<a href="mailto:info@2dcloud.com">email</a> 
+<a href="substacks.html">substacks</a> 
+{% for article in site.posts %}{% if article.category == 'shop' %}{% elsif article.category == "author"%}{% elsif article.category == "explodingwrists"%}{% elsif article.layout == "redirect"%}{% elsif article.category == "notpublic"%}{% else %}{% if article.url != page.url %}<a href='{{site.baseurl}}{{article.url}}'>{% endif %}{{article.title}}{% if article.url != page.url %}</a>{% endif %} {% endif %}{% endfor %}
+{% endif %}
